syntax = "proto3";

option go_package = "github.com/hyperxpizza/cdn/grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message File {
    int64 id = 1;
    string name = 2;
    int64 bucketID = 3;
    uint64 size = 4;
    uint64 sizeAfterCompression = 5;
    string extension = 6;
    string mimeType = 7;
    google.protobuf.Timestamp created = 8;
    google.protobuf.Timestamp updated = 9;
}

message Bucket {
    int64 id = 1;
    string name = 2;
    google.protobuf.Timestamp created = 3;
    google.protobuf.Timestamp updated = 4;
}

message BucketName {
    string name = 1; 
}

message CreateBucketResponse {
    int64 id = 1;
}

message UploadFileRequest {
    oneof data {
        File file = 1;
        bytes chunkData = 2;
    }
}

message DownloadFileRequest {
    string bucket = 1;
    string name = 2;
}

message DownlaodFileRespose {
    bytes chunk_data = 1;
}

message UploadFileResponse {
    string id = 1;
    uint32 size = 2; 
}

message SearchRequest {
    string phrase = 1;
}

message FileArray {
    repeated File files = 1;
}

message DeleteFileRequest {
    string bucket = 1;
    string name = 2;
}

service CDNGrpcService {
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {};
    rpc DownloadFile(DownloadFileRequest) returns (stream DownlaodFileRespose) {};
    rpc SearchFiles(SearchRequest) returns (FileArray) {};
    rpc DeleteFile(DeleteFileRequest) returns (google.protobuf.Empty) {};

    rpc CreateBucket(BucketName) returns (CreateBucketResponse) {};
    rpc GetFilesFromBucket(BucketName) returns (FileArray) {};
    rpc DeleteBucket(BucketName) returns (google.protobuf.Empty) {};
    
}